Fixed Whitespace

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .centered {
   position: absolute;
-  top: 41%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 100%;
@@ -10,15 +10,11 @@
 .mainflex{
   display: flex;
 	align-items: center;
-	margin: 0 auto;
-	padding: 0 0%;
-	max-width: 1280px;
   background-color: transparent;
   position: absolute;
-  top: 52%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 99999999;
   width: 100%;
 }
 
@@ -33,10 +29,13 @@ ul {
 ul li {
   display: inline-block;
   padding: 0 20px;
-  height: 50px;
   white-space: nowrap;
 }
 
-.icon{
-  cursor: pointer;
+html{
+  margin:0;
+  padding:0;
+  max-height:100vh;
+  max-width:100vw;
+  overflow:hidden;
 }
